test/js/node/test/parallel/test-stream-base-typechecking.js.log.txt
3 | const assert = require('assert');
4 | const net = require('net');
5 | 
6 | const server = net.createServer().listen(0, common.mustCall(() => {
7 |   const client = net.connect(server.address().port, common.mustCall(() => {
8 |     assert.throws(() => {
               ^
AssertionError: Expected values to be strictly deep-equal:
+ actual - expected

  {
+   code: 'ERR_UNKNOWN_ENCODING',
+   message: 'Unknown encoding: buffer',
-   code: 'ERR_INVALID_ARG_TYPE',
-   message: 'Second argument must be a buffer',
    name: 'TypeError'
  }
 code: "ERR_ASSERTION"

      at /Users/bun/code/bun/test/js/node/test/parallel/test-stream-base-typechecking.js:8:12
      at emit (node:events:74:48)
      at open (node:net:103:9)

Bun v1.1.31-debug+5fc53353f (macOS arm64)
